--- a/AboutMe.html
+++ b/AboutMe.html
@@ -3,8 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home Page</title>
+  <title>About Me</title>
   <link rel="stylesheet" href="style.css" />
+
+  <style>
+    .nav-link{
+      display: inline;
+      padding: 5px;
+      margin: 4px;
+      color: #f5f5ff;
+    }
+    h2{
+      padding-left: 600px;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -14,35 +26,45 @@
       <th><h1>Janay Patel</h1></th>
 
       <nav>
-        <th style="padding-left: 550px;"><a class="nav-link" href="index.html">Home</a></th>
-        <th><a class="nav-link" href="AboutMe.html">About Me</a></th>
-        <th><a class="nav-link" href="WorkingSmaples.html">Working Samples</a></th>
+        <div class="nav-link">
+          <th style="padding-left: 500px;"><a class="nav-link" href="index.html">Home</a></th>
+          <th><a class="nav-link" href="AboutMe.html">About Me</a></th>
+          <th><a class="nav-link" href="ExtracurricularActivities.html">Extracurricular Activities</a></th>
+        </div>
       </nav>
     </table>
   </header>
 
   <main>
     <h2>About Me</h2>
-    <p>​In my mission to explore the technology, I constantly seek out new and 
-      emerging trends. Like artificial intelligence and virtual reality, I look 
-      into the latest innovations, eagerly absorbing knowledge and experimenting 
-      with cutting-edge tools. The fast-paced nature of the tech world keeps me 
-      on my toes, pushing me to adapt, learn, and stay ahead of the curve. With 
-      each new discovery, I am excited by the boundless potential technology holds 
-      to shape the future and make a positive impact on the world. As a 14-year-old 
-      tech inspired teen, I am excited to be part of this ever-evolving landscape 
-      and look forward to the endless possibilities that lie ahead. I have learned 
-      from HGI Middle School from grade 6 to 8, joined track and basketball team. 
-      Then, continued my journey with PTEC at Shaftesbury High School. At 14 years 
-      old, I have already developed a range of skills that contribute to my identity 
-      as a tech enthusiast. One of my primary strengths lies in coding and programming. 
-      I am skilled in various programming languages, such as Python, JavaScript, and 
-      HTML/CSS, allowing me to build websites, develop simple applications, and games. 
-      Additionally, I have developed problem-solving and logical thinking skills, 
-      through coding challenges and projects. You can check out these projects on my 
-      "Working Samples" page.</p>
-      
-    <img style="padding-left: 857px;" src="Images/code.jpg" alt="Picture of code" width="600" height="400"/>
+    <table>
+      <tr>
+        <td>
+          <p style="margin-right: 200px;">​In my mission to explore the technology, I constantly seek out new and 
+            emerging trends. Like artificial intelligence and virtual reality, I look 
+            into the latest innovations, eagerly absorbing knowledge and experimenting 
+            with cutting-edge tools. The fast-paced nature of the tech world keeps me 
+            on my toes, pushing me to adapt, learn, and stay ahead of the curve. With 
+            each new discovery, I am excited by the boundless potential technology holds 
+            to shape the future and make a positive impact on the world. As a 14-year-old 
+            tech inspired teen, I am excited to be part of this ever-evolving landscape 
+            and look forward to the endless possibilities that lie ahead. I have learned 
+            from HGI Middle School from grade 6 to 8, joined track and basketball team. 
+            Then, continued my journey with PTEC at Shaftesbury High School. At 14 years 
+            old, I have already developed a range of skills that contribute to my identity 
+            as a tech enthusiast. One of my primary strengths lies in coding and programming. 
+            I am skilled in various programming languages, such as Python, JavaScript, and 
+            HTML/CSS, allowing me to build websites, develop simple applications, and games. 
+            Additionally, I have developed problem-solving and logical thinking skills, 
+            through coding challenges and projects. You can check out these projects on my 
+            "Working Samples" page.</p>
+        </td>
+        <td>
+          <img src="Images/code.jpg" alt="Picture of code" width="600" height="400"/>
+          <img src="Images/cpu-images-min.jpg" alt="Picture of CPU" width="600" height="400" />
+        </td>
+      </tr>
+    </table>
   </main>
 
   <footer></footer>
