--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
+<!-- Name: Janay Patel
+    Course: Web Development 20S
+    Teacher: Ms. Hoitink
+    School: Pembina Trails Collegiate
+    Date Last Modified: 16 Oct 2023
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home Page</title>
+  <title>Home</title>
   <link rel="stylesheet" href="style.css" />
+
+  <style>
+    .nav-link{
+      display: inline;
+      padding: 5px;
+      margin: 4px;
+      color: #f5f5ff;
+    }
+    span{
+      font-family: serif;
+      font-size: 60px;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -14,22 +34,26 @@
       <th><h1>Janay Patel</h1></th>
 
       <nav>
-        <th style="padding-left: 550px;"><a class="nav-link" href="index.html">Home</a></th>
-        <th><a class="nav-link" href="AboutMe.html">About Me</a></th>
-        <th><a class="nav-link" href="WorkingSmaples.html">Working Samples</a></th>
+        <div class="nav-link">
+          <th style="padding-left: 500px;"><a class="nav-link" href="index.html">Home</a></th>
+          <th><a class="nav-link" href="AboutMe.html">About Me</a></th>
+          <th><a class="nav-link" href="ExtracurricularActivities.html">Extracurricular Activities</a></th>
+        </div>
       </nav>
     </table>
   </header>
 
   <main>
-    <p style="padding-left: 750px; padding-top: 100px;">​Welcome to my ePortfolio! I'm Janay, a young programmer passionate about technology. 
+    <div class="intro">
+      <p>​Welcome to my <span>ePortfolio</span>! I'm Janay, a young programmer passionate about technology. 
       With a commitment and a drive for continuous learning, I aim to make an imapct in our 
-      world full of technology. Through this ePortfolio, I invite you to explore my journey, 
+      world full of technology. Through this ePortfolio, I invite you to explore my journey, 
       achievements, and skills. You'll get a thorough rundown of my qualifications, showing 
-      my best work samples and projects along with giving you a look at my educational 
+      my best work samples and projects along with giving you a look at my educational 
       background and experience. I hope that you find inspiration and insight as you navigate 
       through the different sections. Please feel free to reach out to me with any inquiries 
       or opportunities for collaboration. Thank you for visiting!"</p>
+    </div>
   </main>
 
   <footer></footer>
