--- a/AboutMe.html
+++ b/AboutMe.html
@@ -6,6 +6,7 @@
   <title>About Me</title>
   <link rel="stylesheet" href="style.css" />
 
+  <!-- internal css -->
   <style>
     .nav-link{
       display: inline;
@@ -20,11 +21,13 @@
 </head>
 <body>
   <header>
+    <!-- Navigation Bar -->
     <table>
       <th><img id="gradHat" src="Images/gradHat.png" alt="Graduation Hat" width="130" height="100"/></th>
 
       <th><h1>Janay Patel</h1></th>
 
+      <!-- Navigation links -->
       <nav>
         <div class="nav-link">
           <th style="padding-left: 500px;"><a class="nav-link" href="index.html">Home</a></th>
@@ -36,10 +39,12 @@
   </header>
 
   <main>
+    <!-- title -->
     <h2>About Me</h2>
     <table>
       <tr>
         <td>
+          <!-- The paragraph for content describing stuff about me -->
           <p style="margin-right: 200px;">​In my mission to explore the technology, I constantly seek out new and 
             emerging trends. Like artificial intelligence and virtual reality, I look 
             into the latest innovations, eagerly absorbing knowledge and experimenting 
@@ -60,6 +65,7 @@
             "Working Samples" page.</p>
         </td>
         <td>
+          <!-- Pictures related to my interests -->
           <img src="Images/code.jpg" alt="Picture of code" width="600" height="400"/>
           <img src="Images/cpu-images-min.jpg" alt="Picture of CPU" width="600" height="400" />
         </td>
@@ -67,6 +73,7 @@
     </table>
   </main>
 
+  <!-- The footer of the wepage -->
   <footer></footer>
 
 </body>
