--- a/ExtracurricularActivities.html
+++ b/ExtracurricularActivities.html
@@ -6,6 +6,7 @@
   <title>Extracurricular Activities</title>
   <link rel="stylesheet" href="style.css" />
 
+  <!-- internal css -->
   <style>
     .nav-link{
       display: inline;
@@ -21,11 +22,13 @@
 </head>
 <body>
   <header>
+    <!-- navigation bar -->
     <table>
       <th><img id="gradHat" src="Images/gradHat.png" alt="Graduation Hat" width="130" height="100"/></th>
 
       <th><h1>Janay Patel</h1></th>
 
+      <!-- navigation links -->
       <nav>
         <div class="nav-link">
           <th style="padding-left: 500px;"><a class="nav-link" href="index.html">Home</a></th>
@@ -37,14 +40,17 @@
   </header>
 
   <main>
+    <!-- title -->
     <h2>Extracurricular Activities</h2>
     <table>
       <tr>
         <td>
+          <!-- images of the extraccurricular activites I did -->
           <img src="Images/cricket.jpg" alt="Picture of code" width="600" height="400"/>
           <img src="Images/soccer.jpg" alt="Picture of CPU" width="600" height="400" />
         </td>
         <td>
+          <!-- Title and description of my extracurricular activities -->
           <h3>1. Manitoba Cricket Association</h3>
           <p>​As a player from the Manitoba Cricket Association (MCA), I am proud to be part of a vibrant and growing cricket community in Manitoba. The MCA provides an inclusive and supportive environment for cricket enthusiasts of all ages and skill levels. Through my involvement with the MCA, I have had the opportunity to develop my cricketing skills, participate in competitive leagues and tournaments, and form lasting friendships with fellow players. The MCA organizes various programs and initiatives aimed at promoting cricket and nurturing talent in the region.</p>
           <h3>2. South Winnipeg Community Center Soccer Club</h3>
@@ -54,6 +60,7 @@
     </table>
   </main>
 
+  <!-- the footer of the webpage -->
   <footer></footer>
 
 </body>
