--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <title>Home</title>
   <link rel="stylesheet" href="style.css" />
 
+  <!-- internal css -->
   <style>
     .nav-link{
       display: inline;
@@ -27,12 +28,14 @@
   </style>
 </head>
 <body>
+  <!-- Navigational Bar -->
   <header>
     <table>
       <th><img id="gradHat" src="Images/gradHat.png" alt="Graduation Hat" width="130" height="100"/></th>
 
       <th><h1>Janay Patel</h1></th>
 
+      <!-- Navigation links -->
       <nav>
         <div class="nav-link">
           <th style="padding-left: 500px;"><a class="nav-link" href="index.html">Home</a></th>
@@ -44,6 +47,7 @@
   </header>
 
   <main>
+    <!-- Introduction Paragraph -->
     <div class="intro">
       <p>​Welcome to my <span>ePortfolio</span>! I'm Janay, a young programmer passionate about technology. 
       With a commitment and a drive for continuous learning, I aim to make an imapct in our 
@@ -56,6 +60,7 @@
     </div>
   </main>
 
+  <!-- Footer of the webpage -->
   <footer></footer>
 
 </body>
