--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
       <!-- Navigation links -->
       <nav>
         <div class="nav-link">
-          <th style="padding-left: 500px;"><a class="nav-link" href="index.html">Home</a></th>
+          <th style="padding-left: 400px;"><a class="nav-link" href="index.html">Home</a></th>
           <th><a class="nav-link" href="AboutMe.html">About Me</a></th>
           <th><a class="nav-link" href="ExtracurricularActivities.html">Extracurricular Activities</a></th>
+          <th><a class="nav-link" href="ContactMe.html">Contact Me</a></th>
         </div>
       </nav>
     </table>
