--- a/AboutMe.html
+++ b/AboutMe.html
@@ -46,19 +46,26 @@
       <tr>
         <td>
           <!-- The paragraph for content describing stuff about me -->
-          <p style="margin-right: 200px;">​In my mission to explore the technology, I constantly seek out new and 
+          <p style="margin-right: 250px;">​In my mission to explore the technology, I constantly seek out new and 
             emerging trends. Like artificial intelligence and virtual reality, I look 
             into the latest innovations, eagerly absorbing knowledge and experimenting 
             with cutting-edge tools. The fast-paced nature of the tech world keeps me 
             on my toes, pushing me to adapt, learn, and stay ahead of the curve. With 
             each new discovery, I am excited by the boundless potential technology holds 
-            to shape the future and make a positive impact on the world. As a 14-year-old 
-            tech inspired teen, I am excited to be part of this ever-evolving landscape 
+            to shape the future and make a positive impact on the world.
+            <br />
+            <br />
+            <br />
+            As a 14-year-old tech inspired teen, I am excited to be part of this ever-evolving landscape 
             and look forward to the endless possibilities that lie ahead. I have learned 
             from HGI Middle School from grade 6 to 8, joined track and basketball team. 
             Then, continued my journey with PTEC at Shaftesbury High School. At 14 years 
             old, I have already developed a range of skills that contribute to my identity 
-            as a tech enthusiast. One of my primary strengths lies in coding and programming. 
+            as a tech enthusiast.
+            <br />
+            <br />
+            <br />
+            One of my primary strengths lies in coding and programming. 
             I am skilled in various programming languages, such as Python, JavaScript, and 
             HTML/CSS, allowing me to build websites, develop simple applications, and games. 
             Additionally, I have developed problem-solving and logical thinking skills, 
@@ -67,8 +74,9 @@
         </td>
         <td>
           <!-- Pictures related to my interests -->
-          <img src="Images/code.jpg" alt="Picture of code" width="600" height="400"/>
-          <img src="Images/cpu-images-min.jpg" alt="Picture of CPU" width="600" height="400" />
+          <img class="image" src="Images/code.jpg" alt="Picture of code" width="600" height="400"/>
+          <img class="image" src="Images/hardware-close-up-computer-board-90961034-transformed.png" alt="Close up image of a black circuit board with capacitors and memory modues" width="600" height="400" />
+          <img class="image" src="Images/cpu-images-min.jpg" alt="Picture of CPU" width="600" height="400" />
         </td>
       </tr>
     </table>
