--- a/ContactMe.html
+++ b/ContactMe.html
@@ -43,7 +43,7 @@
     <!-- title -->
     <h2>Contact Me</h2>
     <form>
-      <fieldset>
+      <fieldset method="GET">
         <!-- title of fieldset -->
         <legend>Contact</legend>
         <!-- firstname -->
